--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ a {
     font: 900;
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 300;
-    margin-top: 10px;
-    padding-top: 50px;
-    margin-left: 50px;
+    margin-top: 1vw;
+    padding-top: 5vw;
+    margin-left: 5vw;
 }
 
 .jumbopara {
@@ -17,9 +17,9 @@ a {
     font: 300;
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 200;
-    margin-top: 10px;
-    margin-left: 50px;
-    margin-right: 200px;
+    margin-top: 1vw;
+    margin-left: 5vw;
+    margin-right: 20vw;
 
 }
 
@@ -56,7 +56,7 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 10px;
+    padding-top: 1vw;
   }
 
 
@@ -106,8 +106,8 @@ a {
 .connect-btn{
     background-color: transparent;
     border: 4px solid white;
-    width: 250px;
-    height: 50px;
+    width: 15vw;
+    height: 4vw;
     position: absolute;
     top: 75%;
     left: 40%;
@@ -120,7 +120,7 @@ a {
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 300;
     text-align: center;
-    padding-top: 5px;
+    padding-top: 1vw;
 
     
 }
@@ -249,4 +249,7 @@ a {
 
 .workTiles-projects div a{
     display: flex;
+}
+.workTiles-projects div image{
+    padding-bottom: 2vw;
 }
